frontend/test/should_pass/bitbucket3b.grg
#using "bitbucket3b.gm"

procedure DoesNotWork(){
    for(n:Node in nodes()) {
        emit(typeof(n));
    }
    for(e:Edge in edges()) {
        emit(typeof(e));
    }
    def ref myNodes:array<Node> = nodes(MyNode).asArray();
    for(n:MyNode in myNodes) {
        n.testAttribute = "new value";
        emit(typeof(n));
        emit(": " + n.testAttribute + "\n");
    }
    return();
}
