frontend/test/should_fail/bitbucket30_004.grg
rule rEmitSetUEdgeReverseFail {
    modify {
        eval {
			def ref s:set<AEdge>;
			s=edges(UEdge);
			emit("1 value of attribute 5 6 " + s + "\n");
		}
    }
}

